--- a/reset-password.twig
+++ b/reset-password.twig
@@ -3,25 +3,22 @@
 {{this.registerJs('AuthController.resetPassword()')}}
 {% set config       = _Network.getThemeConfig() %}
 
-<div class="login-page">
+<div class="login-page u-margin-top-50 u-margin-bottom-80">
     <div class="container">
         <div class="row c-reset-password">
-            <div class="col-12 col-lg-7 u-margin-top-40 u-margin-bottom-60" id="login-social">
-                <h3 class="">Set your password</h3>
-                <div class="">
+            <div class="col-12 col-lg-7" id="login-social">
+                <h3 class="u-heading__large u-heading__large-xs">Set your password</h3>
+
+                <div class="c-generic-form u-margin-top-30">
                     <form id="resetPasswordForm" class="" action="" method="post">
                         <input type="hidden" name="_csrf" value="{{_AppHelper.getCsrfToken()}}" />
-                        
-                        <div class="row">
-                            <div class="col-12 col-md-6 u-margin-top-30">
-                                {{_AppForm.input({type:'password', name: 'password', value: '', id: 'password', class: 'form-control', placeholder: 'New Password'}) | raw }}
-                            </div>
+                        <div class="c-generic-form__group m-width400">
+                            <label class="c-generic-form__group-label-text">New password</label>
+                            {{_AppForm.input({type:'password', name: 'password', value: '', id: 'password', class: 'form-control', placeholder: 'New Password'}) | raw }}
                         </div>
-                        
-                        <div class="row">
-                            <div class="col-12 col-md-6 u-margin-top-20  u-margin-bottom-30">
-                                {{_AppForm.input({type:'password', name: 'verifypassword', value: '', class: 'form-control', placeholder: 'Verify Password'}) | raw }}
-                            </div>
+                        <div class="c-generic-form__group m-width400">
+                            <label class="c-generic-form__group-label-text">Verify new password</label>
+                            {{_AppForm.input({type:'password', name: 'verifypassword', value: '', class: 'form-control', placeholder: 'Verify Password'}) | raw }}
                         </div>
 
                         {% if errors | length > 0 %}
@@ -34,9 +31,7 @@
                             </ul>
                         {% endif %}
 
-
-
-                        {{_AppForm.button({type:'submit', name: 'resetPassword', class: 'btn btn-success forget_btn c-button c-button--rounded c-button--blue', label:'Submit'}) | raw }}
+                        {{_AppForm.button({type:'submit', name: 'resetPassword', class: 'forget_btn c-button c-button--fwidth c-button--radius c-button--blue', label:'Reset password'}) | raw }}
                     </form>
                 </div>
             </div>
