--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -60,6 +60,7 @@
 @import "component.modals";
 @import "component.modal";
 @import "component.search";
+@import "component.buttons";
 
 // listings
 
@@ -86,6 +87,7 @@
 @import "card-5";
 @import "card-6";
 @import "card-7";
+@import "card-8";
 @import "card-9";
 
 @import "event-card";
