--- a/static/sass/utility/partials/_heading.scss
+++ b/static/sass/utility/partials/_heading.scss
@@ -9,6 +9,10 @@
 
         @include responsive(xs) {
             @include font-size(26);
+
+            &.u-heading__large_32 {
+                @include font-size(32);
+            }
         }
     }
 }
