--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% if params.hasMedia %}
-    <figure class="{{params.cardType}}c-cards-view__media {{params.videoClass}}" title="{{imageSize}}">
+    <figure class="{{params.cardType}}c-cards-view__media c-cards-view__media--video {{params.videoClass}}" title="{{imageSize}}">
         <picture>
             <source media="(max-width: 767px) and (min-width: 501px)" srcset="{{params.imageMedium}}">
             <source media="(max-width: 991px) and (min-width: 768px)" srcset="{{params.imageMedium}}">
@@ -30,8 +30,12 @@
 
 <div class="{{params.cardType}}c-cards-view__container">
     <div class="c-cards-view__container-topSection">
-        <div class="{{params.cardType}}c-cards-view__category">{{params.category}}</div>
-        
+        <div class="c-cards-view__category-wrap">
+            {% if params.additionalCategory is defined and params.additionalCategory is not empty %}
+            <div class="c-cards-view__additional-category">{{params.additionalCategory}}</div>
+            {% endif %}
+            <div class="{{params.cardType}}c-cards-view__category">{{params.category}}</div>
+        </div>        
         <h2 class="{{params.cardType}}c-cards-view__heading js-c-cards-view-heading j-truncate j-headline">{{ params.title }}</h2>
         
         <p class="{{params.cardType}}c-cards-view__description js-c-cards-view-description j-truncate j-excerpt">{{ quotes.smarten(params.content | raw) }}</p>
