--- a/partials/_article-feature.twig
+++ b/partials/_article-feature.twig
@@ -43,7 +43,7 @@
         
         <p class="{{params.cardType}}c-cards-view__description js-c-cards-view-description j-truncate j-excerpt">{{ quotes.smarten(params.content | raw) }}</p>
     </div>
-    <div class="{{params.cardType}}c-cards-view__author">
+    <div class="{{params.cardType}}c-cards-view__author {{params.videoClass}}">
         <div class="{{params.cardType}}c-cards-view__author-name">{{ params.author }}</div>
         <div class="{{params.cardType}}c-cards-view__time">{{params.publishDate}}</div>
     </div>
