--- a/partials/_article-main.twig
+++ b/partials/_article-main.twig
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% if params.hasMedia %}
-    <figure class="{{params.cardType}}c-cards-view__media c-cards-view__media--video {{params.videoClass}}" title="{{imageSize}}">
+    <figure class="{{params.cardType}}c-cards-view__media {{params.videoClass}}" title="{{imageSize}}">
         <picture>
             <source media="(max-width: 767px) and (min-width: 501px)" srcset="{{params.imageMedium}}">
             <source media="(max-width: 991px) and (min-width: 768px)" srcset="{{params.imageMedium}}">
@@ -40,7 +40,7 @@
         
         <p class="{{params.cardType}}c-cards-view__description js-c-cards-view-description j-truncate j-excerpt">{{ quotes.smarten(params.content | raw) }}</p>
     </div>
-    <div class="{{params.cardType}}c-cards-view__author">
+    <div class="{{params.cardType}}c-cards-view__author {{params.videoClass}}">
         <div class="{{params.cardType}}c-cards-view__author-name">{{ params.author }}</div>
         <div class="{{params.cardType}}c-cards-view__time">{{params.publishDate}}</div>
     </div>
