--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -25,15 +25,14 @@
             <div class="row">
                 <div class="col-12 col-lg-3 left-border">
                     {% for i in 4..5 if articles[articleCount] %}
-                    {{this.render('../_single-article.twig', {
-                    article: articles[articleCount],
-                    position: (articleCount+1),
-                    imageSize: {width: 296, height: 260},
-                    containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription
-                    card--verticalMulti card--verticalMulti-xs",
-                    timeSuppress: timeSuppress
-                    }) | raw}}
-                    {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
+                        {{this.render('../_single-article.twig', {
+                            article: articles[articleCount],
+                            position: (articleCount+1),
+                            imageSize: {width: 296, height: 260},
+                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti card--verticalMulti-xs",
+                            timeSuppress: timeSuppress
+                        }) | raw}}
+                        {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
                     {% endfor %}
                 </div>
                 <div class="col-12 col-lg-6 left-border">
